# tripster

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
src/app/: exceptions.py  main.py
src/app/api/: dependencies.py  routers.py
src/app/api/v1/routers/: auth.py  publications.py
src/app/core/: config.py  security.py
src/app/db/: db.py
src/app/migrations/: env.py
src/app/migrations/versions/: 0a5c1f30c216_.py
src/app/models/: publications.py  users.py
src/app/repositories/: base.py  publications.py  users.py
src/app/schemas/: publications.py  users.py
src/app/services/: publications.py  users.py
src/app/utils/: unit_of_work.py
